--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <body>
     <h1>Monstr Inc.</h1>
     <div id='create-monster'></div>
-    <form action="http://localhost:3000/monsters/?_limit=50" method="POST">                 
+    <!-- <form action="http://localhost:3000/monsters/?_limit=50" method="POST">                  -->
+    <form>
     <input type="text" id='name' name="Name" placeholder="Monster's Name"/>
     <input type="text" id='age' name="Age" placeholder="Monster's Age"/>
     <input type="text" id='description' name="Description" placeholder="Monster's Description"/>
